--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,14 @@
     "es2021": true
   },
   "extends": ["react-app", "prettier", "react-app/jest", "plugin:css-modules/recommended"],
+  "overrides": [
+    {
+      "files": ["**/*.stories.*"],
+      "rules": {
+        "import/no-anonymous-default-export": "off"
+      }
+    }
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
