--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "residen-frontend-admin-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "academy-react-skeleton-app",
+  "version": "0.0.1",
+  "private": false,
+  "authors": [
+    "Victor Jeman"
+  ],
   "dependencies": {
     "axios": "0.27.2",
     "classnames": "2.3.1",
     "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
     "nanoid": "4.0.0",
+    "primeicons": "5.0.0",
+    "primereact": "8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -15,26 +20,6 @@
     "react-use": "17.4.0",
     "typescript": "4.7.4",
     "web-vitals": "2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "@storybook/addon-actions": "6.5.10",
@@ -62,9 +47,31 @@
     "eslint-plugin-no-relative-import-paths": "1.4.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
     "node-sass": "7.0.1",
     "prettier": "2.7.1",
     "prop-types": "15.8.1",
     "webpack": "5.74.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
