--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "useUnknownInCatchVariables": false,
     "baseUrl": "src"
   },
   "include": ["src"]
