--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,6 @@
         "endOfLine": "auto"
       }
     ],
-    "no-relative-import-paths/no-relative-import-paths": ["error", { "allowSameFolder": true }]
+    "no-relative-import-paths/no-relative-import-paths": "off"
   }
 }
