--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
     "nanoid": "4.0.0",
+    "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primereact": "8.3.0",
     "react": "18.2.0",
