--- a/package.json
+++ b/package.json
@@ -44,15 +44,17 @@
     "@typescript-eslint/parser": "5.33.0",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.0",
     "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-no-relative-import-paths": "1.4.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
-    "node-sass": "7.0.1",
     "prettier": "2.7.1",
     "prop-types": "15.8.1",
+    "sass": "1.54.5",
     "webpack": "5.74.0"
   },
   "scripts": {
@@ -61,7 +63,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged --allow-empty",
+    "pre-push": "npm run lint",
+    "lint": "eslint --max-warnings=0 src/**/*.ts src/**/*.tsx ",
+    "postinstall": "husky install"
   },
   "browserslist": {
     "production": [
