CSS modules classes autocomplete

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prettier": "2.7.1",
     "prop-types": "15.8.1",
     "sass": "1.54.5",
+    "typescript-plugin-css-modules": "3.4.0",
     "webpack": "5.74.0"
   },
   "scripts": {
