A improved version of the app...

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "formik": "2.2.9",
     "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
+    "nanoid": "4.0.0",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primereact": "8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-hook": "4.0.3",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-use": "17.4.0",
