--- a/.github/workflows/stg-deploy.yml
+++ b/.github/workflows/stg-deploy.yml
@@ -43,10 +43,11 @@ jobs:
         run: npm install
 
       - name: Build
-        # env:
-        #   REACT_APP_AWS_COGNITO_REGION: ${{ secrets.REACT_APP_AWS_COGNITO_REGION }}
-        #   REACT_APP_AWS_COGNITO_USER_POOL_ID: ${{ secrets.REACT_APP_AWS_COGNITO_USER_POOL_ID }}
-        #   REACT_APP_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID: ${{ secrets.REACT_APP_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID }}
+        env:
+          REACT_APP_AWS_COGNITO_REGION: ${{ secrets.REACT_APP_AWS_COGNITO_REGION }}
+          REACT_APP_AWS_COGNITO_USER_POOL_ID: ${{ secrets.REACT_APP_AWS_COGNITO_USER_POOL_ID }}
+          REACT_APP_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID: ${{ secrets.REACT_APP_AWS_COGNITO_USER_POOL_WEB_CLIENT_ID }}
+          REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
 
         run: npm run build
 
